# lerobot_aug

./: .gitignore  AUGMENTATION_SUMMARY.md  Plan_A_foundation_filtering.md  Plan_B_full_implemntation_sam3.md  Plan_C_upload_CLI__verification.md  README.md  TIER_VALIDATION_FINAL.md  TIER_VALIDATION_REPORT.md  augment_dataset.py  environment.yml  explore_dataset.py  pyproject.toml
.claude/: settings.local.json
src/aloha_augment/: aug_metrics.py  explore_dataset.py  metadata_sync.py  pipeline.py  prefilter.py  sam3_augmentation.py  transforms.py  upload.py  visual_aug.py
tests/: test_metadata_sync.py  test_pipeline_helpers.py  test_prefilter.py  test_transforms.py
tools/: run_production_dataset.py  run_production_dataset_v7.py  run_production_dataset_v8.py  run_production_dataset_v9.py  run_production_dataset_v9_mask.py  run_sam3_box_overlay.py  run_v5_motor.py
