[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "aloha-augment"
version = "0.1.0"
description = "LeRobot v3 dataset augmentation tool"
requires-python = ">=3.10"
dependencies = [
    "numpy",
]

[project.optional-dependencies]
pipeline = ["lerobot>=0.4.4", "torch", "torchvision", "tqdm"]
dev = ["pytest"]

[project.scripts]
aloha-augment = "aloha_augment.pipeline:main"

[tool.hatch.build.targets.wheel]
packages = ["src/aloha_augment"]

[tool.pytest.ini_options]
testpaths = ["tests"]
