[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "aloha-augment"
version = "0.1.0"
description = "LeRobot v3 dataset augmentation tool"
requires-python = ">=3.10"
dependencies = [
    "numpy",
    "transformers>=4.57.6,<5",
    "lerobot>=0.4.4",
    "torch>=2.2.1,<2.11.0",
    "torchvision>=0.21.0,<0.26.0",
    "tqdm",
    "scipy",
    "huggingface_hub>=0.34.2,<0.36.0",
]

[project.optional-dependencies]
sam3 = []
dev = ["pytest"]

[project.scripts]
aloha-augment = "aloha_augment.pipeline:main"

[tool.hatch.build.targets.wheel]
packages = ["src/aloha_augment"]

[tool.pytest.ini_options]
testpaths = ["tests"]
